--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     </header>
 
     <main>
-        <section>
+        <section id="one">
             <h2>The Betta</h2>
-            <p>Whether you know it as a betta splenden or a Chinese fighting fish, odds are, you have an idea of what a betta fish is. One of the most commonly kept fish on the planet, the betta fish is also a deceptively misunderstood pet. Though not particularly picky, they require the same tender love and care as any pet.
+            <img id= "first" src="navin-rai-A7uFvI7Oseo-unsplash.jpg" alt="betta fish in a yellow tinted tank">
+            <p id="one-txt">Whether you know it as a betta splenden or a Chinese fighting fish, odds are, you have an idea of what a betta fish is. One of the most commonly kept fish on the planet, the betta fish is also a deceptively misunderstood pet. Though not particularly picky, they require the same tender love and care as any pet.
             </p>
-            <img src="navin-rai-A7uFvI7Oseo-unsplash.jpg" alt="betta fish in a yellow tinted tank">
+            
         </section>
 
-        <section>
+        <section id="two">
             <article>
                 <img src="timothy-dykes-K5m-TvVpeXk-unsplash.jpg" alt="betta fish digging through black gravel">
                 <h3>Food</h3>
