--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Betta Fish Care</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<script>
+    alert("Salutations!")
+</script>
 <body>
     <header>
         <h1>Betta Fish Care</h1>
@@ -16,6 +19,15 @@
         </nav>
     </header>
 
+    <script>
+        const Like = prompt('Do you like bettas')
+        if (Like == 'yes'){
+            document.write('Liking bettas is correct');
+        } else if (Like == 'no'){
+            document.write('You don\'t like bettas, I see you have no taste.');
+        }
+    </script>
+
     <main>
         <section id="one">
             <h2>The Betta</h2>
@@ -24,6 +36,19 @@
             </p>
             
         </section>
+
+<script>
+    let text;
+    let textTwo
+    if (confirm('Say ok') == true) {
+        text = 'Fish bowls are for cowards.';
+        textTwo = 'You are no coward.'
+    } else {
+        text = 'Exercise your fish.'
+        textTwo = 'Build fishy muscles.'
+    }
+    document.write(text)
+</script>
 
         <section id="two">
             <article>
@@ -51,5 +76,8 @@
         </nav>
         <p>Treat your bettas like royalty</p>
     </footer>
+<script>
+    document.write(textTwo)
+</script>
 </body>
 </html>
