--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <title>Betta Fish Care</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="app.js"></script>
 </head>
 <script>
-    alert("Salutations!")
+    alert("Salutations!");
 </script>
 <body>
     <header>
@@ -17,16 +18,10 @@
                 <li><a href="https://www.freshwatersystems.com/blogs/blog/how-to-maintain-a-freshwater-aquarium">Maintenance</a></li>
             </ul>
         </nav>
+        <script>question();</script>
     </header>
 
-    <script>
-        const Like = prompt('Do you like bettas')
-        if (Like == 'yes'){
-            document.write('Liking bettas is correct');
-        } else if (Like == 'no'){
-            document.write('You don\'t like bettas, I see you have no taste.');
-        }
-    </script>
+   
 
     <main>
         <section id="one">
@@ -34,21 +29,9 @@
             <img id= "first" src="navin-rai-A7uFvI7Oseo-unsplash.jpg" alt="betta fish in a yellow tinted tank">
             <p id="one-txt">Whether you know it as a betta splenden or a Chinese fighting fish, odds are, you have an idea of what a betta fish is. One of the most commonly kept fish on the planet, the betta fish is also a deceptively misunderstood pet. Though not particularly picky, they require the same tender love and care as any pet.
             </p>
-            
         </section>
 
-<script>
-    let text;
-    let textTwo
-    if (confirm('Say ok') == true) {
-        text = 'Fish bowls are for cowards.';
-        textTwo = 'You are no coward.'
-    } else {
-        text = 'Exercise your fish.'
-        textTwo = 'Build fishy muscles.'
-    }
-    document.write(text)
-</script>
+        <script>sayYes();</script>
 
         <section id="two">
             <article>
@@ -76,8 +59,6 @@
         </nav>
         <p>Treat your bettas like royalty</p>
     </footer>
-<script>
-    document.write(textTwo)
-</script>
+<script></script>
 </body>
 </html>
