--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         </section>
     </main>
 
+    <script>bettaNumber();</script>
+
     <footer>
         <nav>
             <a href="https://www.youtube.com/watch?v=pITkcxMr3t4">Have fun</a> |
